--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "chart.js": "^4.4.3",
+    "gun": "^0.2020.1240",
+    "next": "^14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-switch": "^7.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
